# runome

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
examples/: janome_compatible_usage.py  matcher_bench.rs  tokenizer_bench.rs
profiler/: README.md  run_cprofile.py  run_tracemalloc.py
profiler/flamegraph/: README.md  flamegraph_tokenizer.sh  profile_tokenizer.sh
runome/: __init__.py  analyzer.py  charfilter.py  runome.pyi  tokenfilter.py  tokenizer.py
runome/sysdic/: dic.fst
src/: analyzer.rs  charfilter.rs  error.rs  intern.rs  lattice.rs  lib.rs  python_bindings.rs  tokenfilter.rs  tokenizer.rs  tokenizer_tests.rs
src/dict_builder/: build.rs  mod.rs  types.rs
src/dictionary/: dict.rs  dict_resource.rs  dictionary.rs  loader.rs  mod.rs  system_dict.rs  system_dict_tests.rs  types.rs  user_dict.rs  user_dict_tests.rs
tests/: test_analyzer_bindings.py  test_python_api.py
