[package]
name = "runome"
version = "0.1.0"
edition = "2024"

[lib]
name = "runome"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py38", "extension-module"], optional = true }
fst = "0.4.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
csv = "1.3"
anyhow = "1.0"
encoding_rs = "0.8"
glob = "0.3"
env_logger = "0.11"
thiserror = "1.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
